 iodelay_ctrl.v            Locally Modified          650 

Directory modules/bluespec/common/fpgaenv/physical-platform/physical-devices/ddr-sdram/ddr-sdram-xilinx
 ddr-sdram-xilinx.awb      Locally Modified          650 

Somewhat successful effort to get SDRAM working on all ML605 platforms.  It
appears we are suffering from http://www.xilinx.com/support/answers/39767.htm
as some boards sometimes fail to initialize SDRAM, signalling dbg_wrlvl_err.

Changes:
  - Set ddr_reset_n I/O standard to LVCMOS15 per Xilinx AR# 36078.
  - Restore BUFG on clock in DDR3 controller (iodelay_ctrl.v).
  - Remove the parameters in ddr3_wrapper that skipped DDR3 calibration.
    The Xilinx documentation says these should only be set for simulation,
    but is ambiguous on what happens when the parameters are set on hardware.
  - Update to code generated by MIG from ISE 14.3.  I didn't see any significant
    changes, but it didn't hurt.

  - Export calibration debug state as debug scan records when DEBUG_DDR3 AWB
    parameter is non-zero.

----------
mcadler     Date: Tue Nov 20 08:09:17 EST 2012  CSN: CSN-leap-platforms-652
                  Tue Nov 20 13:09:17 UTC 2012


Directory modules/bluespec/common/fpgaenv/physical-platform/physical-devices/pci-express/pcie-bluenoc-virtex6
 pcie-virtex6.awb          Locally Modified          651 
 pcie-virtex6-include.v    Locally Removed           651 

Use %generated for modules that are synthesized.

----------
mcadler     Date: Wed Nov 21 18:22:56 EST 2012  CSN: CSN-leap-platforms-653
                  Wed Nov 21 23:22:56 UTC 2012


Directory drivers/linux/platforms/ml605-pcie/driver
 bluenoc.c                 Locally Modified          652 

Edge condition in BlueNoC driver caused 0-size region to be sent to DMA engine
instead of a full page when the transfer was more than one page and the
last page ended on a page boundary.  The result was some combination of
data corruption and crashes.